CHANGES
--------

Current

    Improved skeleton generating program to include much more
    information in the Python docstrings that was present in the AMQP
    spec file. Merged in the improved docstrings into the client module.

    After having a better look now at the pydocs, it turns out that in
    several methods, a default value of '' can be used for queue names
    and exchange names, so update method signatures to take advantage of
    that.

    Channel.queue_bind() can also take '' as a queue parameter, but
    unfortunately we can't set that as a default value because
    the exchange parameter can't have a default value.  In hindsight
    those args should have been swapped, but it's too late now.

Version 0.2

    Changed the default value for the auto_delete parameter
    in the Channel.exchange_declare and Channel.queue_declare
    methods to True.

    Added an 'insist' parameter to the Connection class
    constructor, defaulting to False.  Setting it to True
    indicates to the AMQP server that you don't want to
    be redirected (you're insisting to connect to the
    specified server).

    Added support for being redirected to another AMQP
    server when a Connection is opened.

    Added tests/fake_redirect_0_8.py to help with testing
    redirect support.


Version 0.1

    Initial version